# cub3d

./: .gitmodules  CMakeLists.txt  Makefile  tester.csv  tester.sh
assets/maps/: color_space01.cub  color_space02.cub  color_space03.cub  duplicated_texture.cub  no_player.cub  normal.cub  normal01.cub  normal02.cub  two_pos.cub  urandom.cub  wall01.cub  wall02.cub
assets/textures/: EA.xpm  NO.xpm  SO.xpm  Untitled.xpm
includes/: cub3d.h  defines.h  map.h  stack.h  types.h
src/: main.c  main2.c  stack.c
src/cub3d/: exit_cub3d.c  ft_isspacestr.c  get_pixel_color.c  get_pixel_colorf.c  getcol.c  load.c  load_cub3d.c  load_textures.c  parse_map.c  run.c
src/map/: check_all_walls.c  check_map.c  check_map_utils.c  load_animated.c  load_color.c  load_map.c  load_map_file.c  load_texure.c  texture_is_animated.c  texture_is_color.c  texture_is_texture.c
src/raycast/: draw_wall.c  mlx.c  player_move.c  raycasting.c  raycasting_2.c  raycasting_utils.c
